Package, Module and template

--- a/hello-world/templates/home.page.tmpl
+++ b/hello-world/templates/home.page.tmpl
@@ -1,5 +1,14 @@
-<!doctype html>
-<html>
-    <h1> This is the home page</h1>
-    <p> This is some text </p>
-</html>
+<!--use "Base" template-->
+{{ template "base" .}}
+
+<!--find the block name "content" and put them -->
+{{ define "content"}}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>This is the home page</h1>
+            <p>This is some text</p>
+        </div>
+    </div>
+</div>
+{{end}}
