--- a/hello-world/templates/about.page.tmpl
+++ b/hello-world/templates/about.page.tmpl
@@ -1,4 +1,10 @@
-<!doctype html>
-<html>
-    <h1> This is the about page</h1>
-</html>
+{{template "base" .}}
+{{define "content"}}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>This is the about page</h1>
+        </div>
+    </div>
+</div>
+{{end}}
